# crazybot

./: .gitignore  buildozer.spec  crazybot.kv  device_filter.xml  hw.py  hwandroid.py  hwlinux.py  justfile  main.py  proxy.py  pyproject.toml
tests/: conftest.py  test_main.py  test_turn_aggressiveness.py
