[project]
name = "crazybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivy>=2.3.1",
    "pyserial>=3.5 ; sys_platform == 'linux'",
    "pyserial>=3.5 ; sys_platform == 'android'",
    "usb4a>=0.3.0 ; sys_platform == 'android'",
    "usbserial4a>=0.4.0 ; sys_platform == 'android'",
    "plyer>=2.1.0 ; sys_platform == 'android'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
